fixing css z-index of wselect

--- a/src/css/wselect.css
+++ b/src/css/wselect.css
@@ -110,7 +110,7 @@
 {
     display:none;
     position:absolute;
-    z-index:1099; 
+    z-index:inherit;
     text-align: left;
     background-color: white;
     border: solid 1px #CDCDCD;
